--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
     color: #f6f6f6;
 }
 .titulo-destaque {
-    color: #22D4FD;
+    color: #ff005a;
 }
 
 .apresentacao {
@@ -38,6 +38,12 @@ body {
     font-family: 'Montserrat', sans-serif;
 }
 
+.apresentacao__links__subtitulo{
+    font-family:'Krona One', sans-serif;
+    font-weight: 400;
+    font-size: 24px;
+}
+
 .apresentacao__links {
     display: flex;
     flex-direction: column;
@@ -47,14 +53,14 @@ body {
 }
 
 .apresentacao__links__botao {
-    background-color: #22D4FD;
-    width: 280px;
+    border: 2px solid #ff005a;
+    width: 378px;
     text-align: center;
-    border-radius: 16px;
+    border-radius: 8px;
     font-size: 24px;
     font-weight: 600;
     padding: 21.5px 0;
     text-decoration: none;
-    color: #000;
+    color: #f6f6f6;
     font-family: 'Montserrat', sans-serif;
 }
