fix: aplicando hover nos botões

--- a/style.css
+++ b/style.css
@@ -66,4 +66,8 @@ body {
     text-decoration: none;
     color: #f6f6f6;
     font-family: 'Montserrat', sans-serif;
+
+    &:hover {
+        background-color: #272727;
+    }
 }
