--- a/style.css
+++ b/style.css
@@ -5,7 +5,6 @@
     padding: 0;
 }
 body {
-    height: 100vh;
     box-sizing: border-box;
     background-color: black;
     color: #f6f6f6;
@@ -15,7 +14,7 @@ body {
 }
 
 .apresentacao {
-    margin: 12%;
+    padding: 5%;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -29,12 +28,12 @@ body {
 }
 
 .apresentacao__conteudo__titulo {
-    font-size: 36px;
+    font-size: 30px;
     font-family: 'Krona One', sans-serif;
 }
 
 .apresentacao__conteudo__texto {
-    font-size: 21px;
+    font-size: 18px;
     font-family: 'Montserrat', sans-serif;
 }
 
@@ -49,7 +48,7 @@ body {
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    gap: 32px;
+    gap: 28px;
 }
 
 .apresentacao__links__botao {
@@ -57,7 +56,7 @@ body {
     justify-content: center;
     gap: 10px;
     border: 2px solid rgb(0, 208, 255);
-    width: 378px;
+    width: 350px;
     text-align: center;
     border-radius: 8px;
     font-size: 24px;
@@ -70,4 +69,14 @@ body {
     &:hover {
         background-color: #272727;
     }
+}
+
+.rodape {
+    color: #000000;
+    background-color: rgb(0, 208, 255);
+    padding: 24px;
+    text-align: center;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 25px;
+    font-weight: 400;
 }
