--- a/Styles/style.css
+++ b/Styles/style.css
@@ -1,5 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Krona+One&family=Montserrat:wght@400;600&display=swap');
 
+:root {
+    --cor-primaria: #000000;
+    --cor-secundaria: #f6f6f6;
+    --cor-terciaria: rgb(0, 208, 255);
+
+}
+
 *{
     margin: 0;
     padding: 0;
