--- a/Styles/style.css
+++ b/Styles/style.css
@@ -1,10 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Krona+One&family=Montserrat:wght@400;600&display=swap');
 
 :root {
-    --cor-primaria: #000000;
-    --cor-secundaria: #f6f6f6;
-    --cor-terciaria: rgb(0, 208, 255);
-
+    --cor-primaria: #071E3D;
+    --cor-secundaria: #278EA5;
+    --cor-terciaria: #21E6C1;
+    --cor-hover: #1F4287;
+    --fonte-primaria: 'Krona One', sans-serif;
+    --fonte-secundaria: 'Montserrat', sans-serif;
 }
 
 *{
@@ -13,8 +15,8 @@
 }
 body {
     box-sizing: border-box;
-    background-color: black;
-    color: #f6f6f6;
+    background-color: var(--cor-primaria);
+    color: var(--cor-secundaria);
 }
 
 .cabecalho {
@@ -27,16 +29,16 @@ body {
 }
 
 .cabecalho_link {
-    font-family: 'Montserrat', sans-serif;
+    font-family: var(--fonte-secundaria);
     font-size: 24px;
     font-weight: 600;
-    color: rgb(0, 208, 255);
+    color: var(--cor-terciaria);
     text-decoration: none;
 }
 
 
 .titulo-destaque {
-    color: rgb(0, 208, 255);
+    color: var(--cor-terciaria);
 }
 
 .apresentacao {
@@ -55,16 +57,16 @@ body {
 
 .apresentacao__conteudo__titulo {
     font-size: 30px;
-    font-family: 'Krona One', sans-serif;
+    font-family: var(--fonte-primaria);
 }
 
 .apresentacao__conteudo__texto {
     font-size: 18px;
-    font-family: 'Montserrat', sans-serif;
+    font-family: var(--fonte-secundaria);
 }
 
 .apresentacao__links__subtitulo{
-    font-family:'Krona One', sans-serif;
+    font-family: var(--fonte-primaria);
     font-weight: 400;
     font-size: 24px;
 }
@@ -81,7 +83,7 @@ body {
     display: flex;
     justify-content: center;
     gap: 10px;
-    border: 2px solid rgb(0, 208, 255);
+    border: 2px solid var(--cor-terciaria);
     width: 350px;
     text-align: center;
     border-radius: 8px;
@@ -89,20 +91,20 @@ body {
     font-weight: 600;
     padding: 21.5px 0;
     text-decoration: none;
-    color: #f6f6f6;
-    font-family: 'Montserrat', sans-serif;
+    color: var(--cor-secundaria);
+    font-family: var(--fonte-secundaria);
 
     &:hover {
-        background-color: #272727;
+        background-color: var(--cor-hover);
     }
 }
 
 .rodape {
-    color: #000000;
-    background-color: rgb(0, 208, 255);
+    color: var(--cor-primaria);
+    background-color: var(--cor-terciaria);
     padding: 24px;
     text-align: center;
-    font-family: 'Montserrat', sans-serif;
+    font-family: var(--fonte-secundaria);
     font-size: 25px;
     font-weight: 400;
 }
